replaced icon.svg for device, snapshot function ready

--- a/app.json
+++ b/app.json
@@ -90,7 +90,25 @@
 	                "filter": "driver_id=synology"
 	              }
 	        ]
-        }    
+        },
+        {
+            "id": "snapshot",
+            "title": {
+                "en": "Take a snapshot",
+                "nl": "Maak een foto"
+            },
+            "args": [
+	              {
+	                "name": "device",
+	                "type": "device",
+	                "placeholder": {
+	                  "en": "Select camera",
+	                  "nl": "Selecteer camera"
+	                },
+	                "filter": "driver_id=synology"
+	              }
+	        ]
+        }  
        ],
         "conditions": [
         {
