Trying new version without node_module dependancy - lower level coding

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
         "en": "Synology Surveillance Station",
         "nl": "Synology Surveillance Station"
     },
-    "version": "1.0.3",
+    "version": "1.1.0",
     "compatibility": ">=0.8.29",
     "author": {
         "name": "Chamid Media",
@@ -124,6 +124,24 @@
 			              "nl": "Mail aan"
 		              }
 	              },
+	              {
+	                "name": "device",
+	                "type": "device",
+	                "placeholder": {
+	                  "en": "Select camera",
+	                  "nl": "Selecteer camera"
+	                },
+	                "filter": "driver_id=synology"
+	              }
+	        ]
+        },
+        {
+            "id": "test",
+            "title": {
+                "en": "Test - work in progress",
+                "nl": "Test"
+            },
+            "args": [
 	              {
 	                "name": "device",
 	                "type": "device",
